force-app/main/default/objects/CLQ_Program__c/fields/CLQ_License_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Issue_Date__c</fullName>
    <inlineHelpText>Date of issuance of license.</inlineHelpText>
    <label>Provisional License Begin Date</label>
    <type>Date</type>
</CustomField>