force-app/main/default/objects/CLQ_Program__c/fields/CLQ_License_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Number__c</fullName>
    <inlineHelpText>The current license number</inlineHelpText>
    <label>License Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>