force-app/main/default/objects/CLQ_Program__c/fields/CLQ_License_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Registration_Status__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Not Licensed</fullName>
            </value>
            <value>
                <fullName>Licensed/Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>