force-app/main/default/objects/CLQ_Program__c/fields/CLQ_License_Revoked_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Revoked_Date__c</fullName>
    <description>Date the license was revoked</description>
    <label>License Revoked Date</label>
    <type>Date</type>
</CustomField>