force-app/main/default/objects/CLQ_Program__c/fields/CLQ_License_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Type__c</fullName>
    <inlineHelpText>Type of license issued</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
                <default>true</default>
                <label>Provisional</label>
            </value>
            <value>
                <fullName>Continuous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>