force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Licensing_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Licensing_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensing Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>