force-app/main/default/objects/CLQ_Program__c/fields/CLQ_LRNC__c.field-meta.xml
<CustomField>
    <fullName>CLQ_LRNC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LRNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>