force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Mailing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Mailing_Address_2__c</fullName>
    <label>Mailing Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>