force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>