force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Mailing_City__c</fullName>
    <label>Mailing City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>