force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Mailing_ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Mailing_ZIP_Code__c</fullName>
    <label>Mailing ZIP Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>