force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Manual__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Must be checked for admins to manually update SUTQ rating fields</description>
    <label>Manual Rating Change</label>
    <type>Checkbox</type>
</CustomField>