force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Materials_stored_in_Tanks__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Materials_stored_in_Tanks__c</fullName>
    <inlineHelpText>List all the materials that are/were stored in the tanks</inlineHelpText>
    <label>Materials stored in Tanks</label>
    <type>TextArea</type>
</CustomField>