force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Max_Capacity_Under_2_Years__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Max_Capacity_Under_2_Years__c</fullName>
    <label>Max Capacity Under 2 Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>