force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Middle_Initial_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Middle_Initial_Parent_Guardian__c</fullName>
    <label>Middle Initial</label>
    <length>3</length>
    <type>Text</type>
</CustomField>