force-app/main/default/objects/CLQ_Program__c/fields/CLQ_MRNC__c.field-meta.xml
<CustomField>
    <fullName>CLQ_MRNC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MRNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>