force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Number_of_Residents__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Number_of_Residents__c</fullName>
    <inlineHelpText>How many people, NOT including yourself, currently live in your home? * (This number should include: children, foster children, relatives, and boarders).</inlineHelpText>
    <label>Number of Residents</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>