force-app/main/default/objects/CLQ_Program__c/fields/CLQ_OCLQS_Configuration__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OCLQS_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OCLQS Configuration</label>
    <referenceTo>CLQ_OCLQS_Configuration__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>