force-app/main/default/objects/CLQ_Program__c/fields/CLQ_OOS_Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OOS_Program_End_Date__c</fullName>
    <label>OOS Program End Date</label>
    <type>Date</type>
</CustomField>