force-app/main/default/objects/CLQ_Program__c/fields/CLQ_OOS_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OOS_Program_Number__c</fullName>
    <inlineHelpText>Other Agency Program Number</inlineHelpText>
    <label>OOS Program Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>