force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Org_Wide_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Org_Wide_Email_Addresses__c</fullName>
    <description>This field includes email addresses for all persons connected to this Organization though a Role. The Role Trigger updates this field, so it can be used to send out emails to all recipients.</description>
    <label>Org Wide Email Addresses</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>