force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Org_Wide_Email_Addresses_SUTQ__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Org_Wide_Email_Addresses_SUTQ__c</fullName>
    <label>Org Wide Email Addresses SUTQ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>