force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Other_Toxic_Substances__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Toxic_Substances__c</fullName>
    <label>Other Toxic Substances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>