force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Parent_Guardian_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Parent_Guardian_Phone__c</fullName>
    <label>Phone(including area code)</label>
    <type>Phone</type>
</CustomField>