force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Part_day_Option__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Part_day_Option__c</fullName>
    <label>Part-day Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>