force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Phone__c</fullName>
    <label>Program Phone</label>
    <type>Phone</type>
</CustomField>