force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Program_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Closure_Date__c</fullName>
    <description>Adding a date field to capture the latest of the permanent or temporary closure</description>
    <label>CP/IPR Closure Date</label>
    <type>Date</type>
</CustomField>