force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Program_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Email__c</fullName>
    <label>Program Email Address</label>
    <type>Email</type>
</CustomField>