force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_ID__c</fullName>
    <displayFormat>{YY}{0000000}</displayFormat>
    <label>Program ID</label>
    <type>AutoNumber</type>
</CustomField>