force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Number__c</fullName>
    <formula>IF(ISBLANK(CLQ_Legacy_Program_Number__c),
IF(or(contains(RecordType.Name,&apos;FCC&apos;),RecordType.Name = &apos;Child Care Center&apos;,RecordType.Name = &apos;Out of State Registration&apos;,RecordType.Name = &apos;In-Home Aide&apos;,RecordType.Name = &apos;Day Camp&apos; ),
&apos;2&apos;&amp;CLQ_Program_ID__c ,
IF(or(RecordType.Name=&apos;Pre School&apos;,RecordType.Name=&apos;School Age Child Care&apos;),
&apos;1&apos;&amp;CLQ_Program_ID__c,null)),CLQ_Legacy_Program_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Number</label>
    <type>Text</type>
</CustomField>