force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Program_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Status_Change_Date__c</fullName>
    <description>Date on which Program Status has been changed</description>
    <label>Program Status Change Date</label>
    <type>Date</type>
</CustomField>