force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Program_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Status_Text__c</fullName>
    <formula>TEXT( CLQ_Program_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Status Text</label>
    <type>Text</type>
</CustomField>