force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Provider_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Provider_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipLabel>Programs (Provider County)</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>