force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Provider_Phone__c</fullName>
    <formula>CLQ_IHA_Name__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>