force-app/main/default/objects/CLQ_Program__c/fields/CLQ_PT_Lic_Start_Dt__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_Lic_Start_Dt__c</fullName>
    <description>This field is updated from the continuous lic program transaction type when the record is approved</description>
    <label>PT Lic Start Dt</label>
    <type>Date</type>
</CustomField>