force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Radon_Gas__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Radon_Gas__c</fullName>
    <label>Radon Gas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>