force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Rating_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rating_Type__c</fullName>
    <label>Rating Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>