force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>