force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Same_as_Program_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Same_as_Program_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as Program Address</label>
    <type>Checkbox</type>
</CustomField>