force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Specialized_Foster_Home__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Specialized_Foster_Home__c</fullName>
    <inlineHelpText>Are you a specialized or treatment foster home?</inlineHelpText>
    <label>Specialized Foster Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>