force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Start_Date__c</fullName>
    <description>Start Date for Day Camp&apos;s Program</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>