force-app/main/default/objects/CLQ_Program__c/fields/CLQ_State_of_LicensedCertifiedExempt__c.field-meta.xml
<CustomField>
    <fullName>CLQ_State_of_LicensedCertifiedExempt__c</fullName>
    <label>State of License/Certification/Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>WV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>