force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Storage_of_Hazardous_Toxic_Material__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Storage_of_Hazardous_Toxic_Material__c</fullName>
    <inlineHelpText>Underground storage of hazardous or toxic materials? * (currently or previously existing)</inlineHelpText>
    <label>Storage of Hazardous/Toxic Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>