force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_1__c</fullName>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>