force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_2__c</fullName>
    <label>Street Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>