force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Street_Address_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_Parent_Guardian__c</fullName>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>