force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Summer_Only__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Summer_Only__c</fullName>
    <label>Summer Only</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>