force-app/main/default/objects/CLQ_Program__c/fields/CLQ_SUTQ_Continuous_Rated_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_SUTQ_Continuous_Rated_Date__c</fullName>
    <description>Populated with the date from which the Program has been continuously rated for SUTQ</description>
    <label>Continuously Rated since</label>
    <type>Date</type>
</CustomField>