force-app/main/default/objects/CLQ_Program__c/fields/CLQ_SUTQ_Exempted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_SUTQ_Exempted__c</fullName>
    <label>SUTQ_Exempted</label>
    <length>10</length>
    <type>Text</type>
</CustomField>