force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Tanks_currently_in_use__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Tanks_currently_in_use__c</fullName>
    <label>Tanks currently in use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>