force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Temporary_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Temporary_Closure_Date__c</fullName>
    <label>Temporary Closure Date</label>
    <type>Date</type>
</CustomField>