force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Enrollment__c</fullName>
    <label>Total Enrollment</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>