force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_Enrollment_School_Age__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Enrollment_School_Age__c</fullName>
    <label>Total Enrollment(School Age)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>