force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_Enrollment_Under_2_5_years__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Enrollment_Under_2_5_years__c</fullName>
    <label>Enrollment Under 2.5-Center; under 2-FCC</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>