force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_Enrollment_Young_Toddler__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Enrollment_Young_Toddler__c</fullName>
    <label>Total Enrollment(Young Toddler)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>