force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_of_Rooms__c</fullName>
    <label>Total # of Rooms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>