force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_of_Rooms_under_21_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_of_Rooms_under_21_2__c</fullName>
    <label>Total # of Rooms (under 2 1/2)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>