force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_Points_Assessed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Points_Assessed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Points Assessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>