force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Total_Staff__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Staff__c</fullName>
    <inlineHelpText>Total Number of Staff at this Program</inlineHelpText>
    <label>Total Staff</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>