force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Type_of_OOS_License__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Type_of_OOS_License__c</fullName>
    <label>Type of OOS License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed/Certified</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>