force-app/main/default/objects/CLQ_Program__c/fields/CLQ_Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Withdrawal_Reason__c</fullName>
    <label>Withdrawal Reason</label>
    <type>TextArea</type>
</CustomField>