force-app/main/default/objects/CLQ_Program__c/fields/CountryAreaRegion__c.field-meta.xml
<CustomField>
    <fullName>CountryAreaRegion__c</fullName>
    <formula>Text(CLQ_County__r.Area_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountryAreaRegion</label>
    <type>Text</type>
</CustomField>