force-app/main/default/objects/CLQ_Program__c/fields/Drawloop_Next_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Agency_Name__c</fullName>
    <description>Created for TFS #11910 to reduce the number of documents being used in the DDP</description>
    <formula>if(RecordType.Name = &quot;Pre School&quot; || RecordType.Name = &quot;School Age Child Care&quot;, &quot;Ohio Department of Education&quot;,&quot;Ohio Department of Job and Family Services&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop Next Agency Name</label>
    <type>Text</type>
</CustomField>