force-app/main/default/objects/CLQ_Program__c/fields/Enter_new_comments__c.field-meta.xml
<CustomField>
    <fullName>Enter_new_comments__c</fullName>
    <description>Rich text area field for users to enter new comments on the program record. Created for SUTQ requirement to address comments functionality</description>
    <inlineHelpText>Enter comments in this text box</inlineHelpText>
    <label>Enter new comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>